# FreedomCLI

./: LICENSE  MANIFEST.in  README.md  build_entry.py  build_release.py  orchat.spec  pyproject.toml
.github/workflows/: publish.yml
freedomcli/: __init__.py  chat.py  completers.py  config.py  constants.py  conversation.py  file_handler.py  main.py  models.py  security.py  streaming.py  ui.py  utils.py  web_scraper.py
orchat/: __init__.py  main.py
